ASSERTION FAILED: !m_inferredType in WebGPU/WGSL/TypeCheck.cpp(1978) https://bugs.webkit.org/show_bug.cgi?id=273407 rdar://127605450

Reviewed by Mike Wyrzykowski.

When reporting a type error for the test condition of an if statement we should
not infer bottom.

* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::visit):
* Source/WebGPU/WGSL/tests/invalid/if.wgsl: Added.

Canonical link: https://commits.webkit.org/278504@main