Source/WebGPU/WGSL/tests/invalid/if.wgsl
@@ -1,0 +1,8 @@
+// RUN: %not %wgslc | %check
+
+fn testIfStatement() {
+  // CHECK-L: expected 'bool', found 'array<f32, 9>'
+    if array<f32, 9>() {
+        return;
+    }
+}
